bug-068241 - Vertical scrollbar is coming on homepage due to slider arrows in 14 laptop

--- a/scss/frontend/pages/_home.scss
+++ b/scss/frontend/pages/_home.scss
@@ -1413,3 +1413,11 @@ $card: 'card';
     }
    
 }
+
+.section{
+    & .container--narrow{
+        @media(min-width: theme('breakpoints.xl','value')){
+            &{width: 92%}
+        }
+    }
+}
